--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,24 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Semibold.ttf
+        - asset: assets/fonts/OpenSans-Bold.ttf
+        - asset: assets/fonts/OpenSans-ExtraBold.ttf
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/Logo_hormoon_festival.png"
+  remove_alpha_ios: true
 
 
